--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="bannerText container">
                     <h1>陈申君
                     </h1>
-                    <p>ui设计师，多年用户界面设计及新媒体运营经验，乐于尝试新技术，学习能力强，热爱上推、上ins、上tumblr。
+                    <p>ui设计师，多年用户界面设计及新媒体运营经验，乐于尝试新技术，学习能力强，热爱生活。
                     </p>
                     <a href="#aboutme" class="mbnt">关于我</a>
                    
@@ -94,10 +94,10 @@
                                 2013年8月份开始第一份设计师工作，至今已经有多年的设计经验。2015年10月份开始接手”上海公积金“微信公众号的美编及内容运营工作。
                             </p>
                             <p>
-                                有着无比强大的设计能力及还可以的前端设计基础，并且一直保持对新技术的学习热情。熟练使用HTML5、CSS3以及JavaScript(jQuery,Zepto)；对流行的前端开发框架，比如Bootstrap3都有实际开发项目；对一些目前比较快前端开发工具和框架有一定的了解和浓厚的兴趣，比如WebPack、AngularJS、React等(请忽略这段报菜名)；
+                                有着不俗的审美观强和良好的设计能力，并且一直保持对新技术的学习热情。有一定的网页开发的经验，能够熟练使用HTML5、CSS3以及JavaScript(jQuery,Zepto)；对流行的前端开发框架，比如Bootstrap3都有实际开发项目；对一些目前比较快前端开发工具和框架有一定的了解和浓厚的兴趣，比如WebPack、AngularJS、React；
                             </p>
                             <p>
-                                长期活跃在推上，经常看一些大牛的技术博客 ，英语过了pets3级（相当于英语四级），对英文书籍和网站的阅读无太多障碍，对国外一些新技术新趋势潮流比较感兴趣。
+                                对英文书籍和网站的阅读无太多障碍，对国外一些新技术新趋势潮流比较感兴趣。
                             </p>
                             <p>爱读书，爱睡觉，爱刷推，平时宅在家中但有时也喜欢出去走走。</p>
                         </div>          
@@ -110,7 +110,7 @@
             <div class="container">
                 <div class="heading">
                     <h2 id="technical_title">技能</h2>
-                    <p>在和甲方爸爸经历长期的第一稿第二稿第三稿修改，乃至最后的最终稿，练就了无比强大设计能力和沟通技巧。</p>
+                    <p>在长年累月的工作，锻炼了我的设计能力和沟通技巧。</p>
                 </div>
                 <div class="row">
                     <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 skillsArea">
@@ -238,13 +238,13 @@
             <div class="container">
                 <div class="heading">
                     <h2>项目</h2>
-                    <p>下面包括一小部分已经上线的网站和dm等。</p>
+                    <p>下面包括一小部分已经上线的网站等等。</p>
                 </div>
                 <div class="row waterfall" data-col-min-width="300">
                     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 refBox">
                         <div class="refBoxcon">
                             <p>
-                                这是我进公司接手的第一个项目，2014年进行改版设计（ps；政务网站甲方要求这样的，不能代表我的审美水平）
+                                这是我进公司接手的第一个项目，2014年进行改版设计
                             </p>
                             <h3>
                             <a href="http://www.shgjj.com/">上海住房公积金网</a>
